nsx-demo/nsx-demo-aws-type-ingress.yaml
# This creates the Deployment for the Web-Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nsx-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nsx-demo
  template:
    metadata:
      labels:
        app: nsx-demo
    spec:
      containers:
      - name: nsx-demo
        image: 532078361261.dkr.ecr.us-east-2.amazonaws.com/nsx-demo:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: myregistrykey
---
# This creates the K8s Service
apiVersion: v1
kind: Service
metadata:
  name: nsx-demo
  labels:
    app: nsx-demo
spec:
  ports:
    # the port that this service should serve on
    - port: 80
  selector:
    app: nsx-demo
---
# This creates the K8s Ingress Controller
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nsx-demo-ingress
spec:
  rules:
  - host: nsx.app.rtbsystems.com
    http:
      paths:
      - backend:
          serviceName: nsx-demo
          servicePort: 80
