nsx-demo/nsx-demo-type-ingress.yaml
# This creates the Deployment for the Web-Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nsx-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nsx-demo
  template:
    metadata:
      labels:
        app: nsx-demo
    spec:
      containers:
      - name: nsx-demo
        image: rotbau/nsx-demo
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80     
---
# This creates the K8s Service
apiVersion: v1
kind: Service
metadata:
  name: nsx-demo
  labels:
    app: nsx-demo
spec:
  ports:
    # the port that this service should serve on
    - port: 80
  selector:
    app: nsx-demo
---
# This creates the K8s Ingress Controller
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nsx-demo-ingress
spec:
  rules:
  - host: nsx.app.rtbsystems.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nsx-demo
            port: 
              number: 80
